# Operation-Esports-Agent

./: .gitignore  .openenvignore  Dockerfile  README.md  __init__.py  client.py  graders.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_space.py  validate_submission.py
data/: task_easy_bracket.json  task_hard_dropout.json  task_medium_conflict.json
server/: __init__.py  app.py  environment.py
