[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esports-tournament-env"
version = "1.0.0"
description = "An OpenEnv environment for managing esports tournament logistics, brackets, and operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "openenv-core>=0.2.0"
]

[project.scripts]
esports-env = "main:main"
server = "server.app:main"